--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andra Wicaksono - Full Stack Developer & Cloud Architect</title>
+
+    <title>Andra Wicaksono - Software Engineer</title>
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="Portfolio website of Andra Wicaksono, a Full Stack Developer and Cloud Architect specializing in React, Kotlin, and Golang."
+      content="Hey there! I'm Andra Wicaksono, a software engineer working in the banking world. I build fast, reliable, and scalable systems with React, Kotlin, Go, and cloud technologies. Passionate about clean code, DevOps, and simplifying complex systems."
     />
     <meta
       name="keywords"
-      content="Andra Wicaksono, Full Stack Developer, Cloud Architect, React, Kotlin, Golang, Portfolio"
+      content="Andra Wicaksono, Software Engineer, Full Stack Developer, Cloud Architect, React Developer, Kotlin Developer, Go Developer, Java, Spring Boot, Microservices, Docker, Kubernetes, AWS, Google Cloud, CI/CD, TailwindCSS, TypeScript"
     />
+    <meta name="author" content="Andra Wicaksono" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://andrawicaksono.com/" />
-    <meta
-      property="og:title"
-      content="Andra Wicaksono - Full Stack Developer & Cloud Architect"
-    />
+    <meta property="og:title" content="Andra Wicaksono - Software Engineer" />
     <meta
       property="og:description"
-      content="Portfolio website of Andra Wicaksono, a Full Stack Developer and Cloud Architect specializing in React, Kotlin, and Golang."
+      content="Hey there! I'm Andra Wicaksono, a software engineer working in the banking world. I build fast, reliable, and scalable systems with React, Kotlin, Go, and cloud technologies. Passionate about clean code, DevOps, and simplifying complex systems."
     />
     <meta
       property="og:image"
-      content="https://andrawicaksono.com/social-preview.jpg"
+      content="https://andrawicaksono.com/social-preview.png"
     />
 
     <!-- Twitter -->
@@ -35,16 +36,20 @@
     <meta property="twitter:url" content="https://andrawicaksono.com/" />
     <meta
       property="twitter:title"
-      content="Andra Wicaksono - Full Stack Developer & Cloud Architect"
+      content="Andra Wicaksono - Software Engineer"
     />
     <meta
       property="twitter:description"
-      content="Portfolio website of Andra Wicaksono, a Full Stack Developer and Cloud Architect specializing in React, Kotlin, and Golang."
+      content="Hey there! I'm Andra Wicaksono, a software engineer working in the banking world. I build fast, reliable, and scalable systems with React, Kotlin, Go, and cloud technologies. Passionate about clean code, DevOps, and simplifying complex systems."
     />
     <meta
       property="twitter:image"
-      content="https://andrawicaksono.com/social-preview.jpg"
+      content="https://andrawicaksono.com/social-preview.png"
     />
+
+    <!-- Manifest / PWA -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#4f46e5" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,6 +58,28 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Andra Wicaksono",
+        "url": "https://andrawicaksono.com",
+        "image": "https://andrawicaksono.com/social-preview.png",
+        "jobTitle": "Software Engineer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Banking Industry"
+        },
+        "sameAs": [
+          "https://github.com/andrawicaksono",
+          "https://linkedin.com/in/andrawicaksono",
+          "https://twitter.com/andrawicaksono"
+        ],
+        "description": "Software engineer passionate about building reliable, scalable, and maintainable systems using React, Kotlin, Go, Docker, Kubernetes, and cloud technologies like AWS and Google Cloud."
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
